# tide-tool-demo

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  tide-tool-demo.code-workspace
data/: example_api_calls.md  example_high_low_tide_dataset.xml  example_tide_dataset.txt  example_tide_dataset.xml
docs/: api.md  index.md
notebooks/: prototype_tide_api_calls.ipynb
src/tide_tool_demo/: __init__.py  __main__.py  tide_tool_demo.py
