[project]
name = "tide-tool-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin H. Skjelvareid", email = "martin.hansen.skjelvareid@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tide-tool-demo = "tide_tool_demo:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
