[project]
name = "tide-tool-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin H. Skjelvareid"}
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mkdocs-material>=9.7.3",
    "numpy>=2.4.2",
    "requests>=2.32.5",
]

[project.scripts]
tide-tool-demo = "tide_tool_demo:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
